--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -7,6 +7,15 @@
                <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="project.html">Portfolio</a></li>
+            <li><a href="#Reflection">Reflection</a></li>
+            <li><a href="#Contact">Contact</a></li>
+          </ul>
+    </nav>
     <!--This is the Home Page-->
 <h1 style="color:rgb(0, 140, 255);">Imani Design</h1>
 <h3>Thank you for visiting Imani Design! Please, look around and inquire to custom create the perfect design for you!</h3>
