--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -4,6 +4,13 @@
                <title>Page title</title>
 </head>
 <body>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="project.html">Portfolio</a></li>
+        <li><a href="#Reflection">Reflection</a></li>
+        <li><a href="#Contact">Contact</a></li>
+      </ul>
     <!--This section is the About page-->
 <h1>Nina Barnett</h1>
 <h3>A little bit about me!</h3>
