--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -8,7 +8,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="project.html">Portfolio</a></li>
-        <li><a href="#Reflection">Reflection</a></li>
+        <li><a href="reflection.html">Reflection</a></li>
         <li><a href="#Contact">Contact</a></li>
       </ul>
     <!--This section is the About page-->
