--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -5,6 +5,7 @@
                <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
@@ -12,8 +13,9 @@
         <li><a href="reflection.html">Reflection</a></li>
         <li><a href="#Contact">Contact</a></li>
       </ul>
+</nav>
     <!--This section is the About page-->
-<h1>Nina Barnett</h1>
+    <h1 style="color:rgb(0, 140, 255);">Nina Barnett</h1>
 <h3>A little bit about me!</h3>
  I believe that the energy and effort you give to the universe and to the people around you will always come back to you. Therefore, I love to help people, give back, and I’m often told that I’m kind-hearted. 
  I always try my best to remain true to myself, regardless of the negativity I am given by others. <br> 
