--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -18,8 +18,7 @@
        <!--This is the Reflection Page-->
        <h1 style="color:rgb(0, 140, 255);">Reflection</h1>
  <h2>My Past Experiences and Future Endeavors</h2>
-
-,<p><b>W</b>hen I initially enrolled at the University of Missouri, I didn’t have a solidified idea of what I wanted to do as a career.
+<p><b>W</b>hen I initially enrolled at the University of Missouri, I didn’t have a solidified idea of what I wanted to do as a career.
     Because I like math, I came into the Fall 2018 semester as an Industrial Engineer major.
     As I realized this wasn’t a good fit for me, the following semester I became undecided. I have a love for animals, so I decided to become an Animal Science major. 
     Although I enjoyed this, it wasn’t something I could see myself doing in my everyday life. I then transferred over to the business school, where I had a focus in marketing. 
