--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -12,14 +12,20 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="project.html">Portfolio</a></li>
-            <li><a href="#Reflection">Reflection</a></li>
+            <li><a href="reflection.html">Reflection</a></li>
             <li><a href="#Contact">Contact</a></li>
           </ul>
     </nav>
     <!--This is the Home Page-->
 <h1 style="color:rgb(0, 140, 255);">Imani Design</h1>
 <h3>Thank you for visiting Imani Design! Please, look around and inquire to custom create the perfect design for you!</h3>
-<p id="paragraph">The purpose of this website is to simultaneously showcase my graphic design work, as well as my new knowledge in web design. My main visitors to my website would be staff from admissions offices, and perspective clients. When applying for graduate school, this website will be used as a portfolio. I will continue to update my portfolio before, during, and after graduate school and use it as a professional business website. Visitors can learn more about me as an individual and get a gist of what my work and style is like. Clients can inquire through the website, giving me a description of what it is they’re looking for. I would also like them to be able to attach inspiration pictures for their design. I have done some illustrative design work as well, and I am interested in creating things like coloring sheets or books. These templates can also be sold on the site.</p>
+<p id="paragraph">The purpose of this website is to simultaneously showcase my graphic design work, as well as my new knowledge in web design. 
+My main visitors to my website would be staff from admissions offices, and perspective clients. When applying for graduate school, this website will be used as a portfolio. 
+I will continue to update my portfolio before, during, and after graduate school and use it as a professional business website. 
+Visitors can learn more about me as an individual and get a gist of what my work and style is like. 
+Clients can inquire through the website, giving me a description of what it is they’re looking for. I would also like them to be able to attach inspiration pictures for their design. 
+I have done some illustrative design work as well, and I am interested in creating things like coloring sheets or books. 
+These templates can also be sold on the site.</p>
 <footer>Nina Barnett <br> nibk27@umsystem.edu</footer>
 </body>
 </html>
