--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -16,7 +16,7 @@
 </nav>
     <!--This section is the About page-->
     <h1 style="color:rgb(0, 140, 255);">Nina Barnett</h1>
-<h3>A little bit about me!</h3>
+<h2>A Little bit About me!</h2>
  I believe that the energy and effort you give to the universe and to the people around you will always come back to you. Therefore, I love to help people, give back, and I’m often told that I’m kind-hearted. 
  I always try my best to remain true to myself, regardless of the negativity I am given by others. <br> 
  So, a quote best fitting for me would be, “There is <i>one</i> <i>word</i> which may serve as a rule of practice for one’s life –<b>"reciprocity"</b>– Confucius. 
