--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -5,6 +5,7 @@
                <title>Home Page</title>
 
                <link rel="stylesheet" href="styles.css">
+               <link rel="navigation" href="nav.css">
 </head>
 <body>
     <nav>
