--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -3,6 +3,7 @@
 <head>               <meta charset="utf-8">
                <title>Page title</title>
                <link rel="stylesheet" href="styles.css">
+               <link rel="navigation" href="nav.css">
 </head>
 <body>
   <nav>
