--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -4,6 +4,7 @@
                <meta charset="utf-8">
                <title>Reflection</title>
                <link rel="stylesheet" href="styles.css">
+			   <link rel="navigation" href="nav.css">
 </head>
 <body>
     <nav>
