--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -19,7 +19,7 @@
     </nav>
     <!--This is the Home Page-->
 <h1 style="color:rgb(0, 140, 255);">Imani Design</h1>
-<h3>Thank you for visiting Imani Design! Please, look around and inquire to custom create the perfect design for you!</h3>
+<h3 id="Heading3">Thank you for visiting Imani Design! Please, look around and inquire to custom create the perfect design for you!</h3>
 <p id="paragraph">The purpose of this website is to simultaneously showcase my graphic design work, as well as my new knowledge in web design. 
 My main visitors to my website would be staff from admissions offices, and perspective clients. When applying for graduate school, this website will be used as a portfolio. 
 I will continue to update my portfolio before, during, and after graduate school and use it as a professional business website. 
