--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -6,7 +6,7 @@
                <meta name="viewport" content="width=device-width, initaial-scale=1.0">
                <title>Home Page</title>
             
-               <link rel="stylesheet" href="styles.css" type="text/css" href="css/style.css">
+               <link rel="stylesheet" href="styles.css">
                <link rel="navigation" href="nav.css">
               
 
