--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<head>               <meta charset="utf-8">
-               <title>Page title</title>
-               <link rel="stylesheet" href="styles.css">
-               <link rel="navigation" href="nav.css">
+<head>              
+        <link rel="stylesheet" href="styles.css">
+        <link rel="navigation" href="nav.css">
+             <meta charset="utf-8">
+              <title>About Me</title>
+               
 </head>
 <body>
   <nav>
@@ -20,7 +22,8 @@
 </nav>
     <!--This section is the About page-->
     <h1 id="aboutheading">NINA BARNETT</h1>
-<h2 id="abouttitle">About me</h2>
+    
+<h2 id="about2">About me</h2>
  <p id="intro">I believe that the energy and effort you give to the universe and to the people around you will always come back to you. Therefore, I love to help people, give back, and I’m often told that I’m kind-hearted. 
  I always try my best to remain true to myself, regardless of the negativity I am given by others. <br> 
  So, a quote best fitting for me would be, “There is <i>one</i> <i>word</i> which may serve as a rule of practice for one’s life –<b>"reciprocity"</b>– Confucius. 
@@ -32,5 +35,7 @@
       Within this degree, I have component focuses on graphic design, business, and cultural studies. I am presumed to graduate in December 2022.</p>
       <h4 id="links"><a href="Nina Barnett Resume.pdf">PDF Resume</a></h4>
       <h5 id="links2"><a href="https://vimeo.com/690281783">Video Resume</a></h5>
+
+      <footer id="foot">Nina Barnett<br>Email: nibk27@umsystem.edu</footer>
 </body>
 </html>
