--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -56,6 +56,6 @@
     I’m very excited to see what’s in store for me!</p>	
 	
 	</div>
-    <footer id="foot2">Nina Barnett <br> nibk27@umsystem.edu</footer>
+	<footer id="foot">Nina Barnett<br>Email: nibk27@umsystem.edu</footer>
 </body>
 </html>
