--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>              
-        <link rel="stylesheet" href="styles.css">
-        <link rel="navigation" href="nav.css">
-             <meta charset="utf-8">
-              <title>About Me</title>
+  <link rel="stylesheet" href="styles.css">
+	<link rel="navigation" href="nav.css">
+               <meta charset="utf-8">
+               <title>About</title>  
                
 </head>
 <body>
