--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -33,10 +33,10 @@
     <div class="photo-gallery">
         <img id="leaves" src="leaves2.png" width="300px" height="500px">
         <img id="didot" src="didot 2 (1).png" width="200px" height="550px">
-        <img id="spider" src="file:///Users/ninabarnett/Desktop/islt_7310/Spiders%202.png" width="550px" height="850px">
+        <img id="spider" src="Spiders 2.png" width="550px" height="850px">
         <img id="poster" src="POSTER 2.png" width="200px" height="550px">
         <img id="hands" src="hands.png" width="350px" height="650px">
-        <img id="sunset" src="file:///Users/ninabarnett/Desktop/islt_7310/Sunset.png" width="400px" height="500px">
+        <img id="sunset" src="Sunset.png" width="400px" height="500px">
         </div>
 
            <!--This is the Home Page-->
