--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -25,15 +25,16 @@
     <!--This section is the About page-->
     <h1 id="aboutheading">NINA BARNETT</h1>
 
-<h2 id="about2">About me</h2>
- <p id="intro">I believe that the energy and effort you give to the universe and to the people around you will always come back to you. Therefore, I love to help people, give back, and I’m often told that I’m kind-hearted. 
- I always try my best to remain true to myself, regardless of the negativity I am given by others. <br> 
- So, a quote best fitting for me would be, “There is <i>one</i> <i>word</i> which may serve as a rule of practice for one’s life –<b>"reciprocity"</b>– Confucius. 
- I also enjoy this quote. “Reciprocity is a deep instinct; it is the basic currency of social life” – Jonathan Haidt. 
- My name is Nina Barnett, and I am from Chicago, IL. For the most part I’m an extrovert and going out to eat with friends or trying creative, spontaneous activities are my definition of fun.
+<img id="headshot" src="headshot.png" width="100px" height="100px"></a>
+
+<h3 id="Quote">“There is <i>one</i> <i>word</i> which may serve as a rule of practice for one’s life –<b>"reciprocity"</b>– Confucius. </h3>
+ <h4 id="Under">I believe that the energy and effort you give to the universe and to the people around you will always come back to you. Therefore, I love to help people, give back, and I’m often told that I’m kind-hearted. 
+  I always try my best to remain true to myself, regardless of the negativity I am given by others.</h4>
+
+ <p id="intro"> My name is Nina Barnett, and I am from Chicago, IL. For the most part I’m an extrovert and going out to eat with friends or trying creative, spontaneous activities are my definition of fun.
      But you know what they say, “work hard, play hard”. I’m a hard-working person that loves to experiment and learn new things. I like to put my full effort into whatever I do, and I will work until I get the best possible result. 
      Because of this, I’m well-rounded, and I have many different interests and hobbies. However, my top two passions are being a hair stylist, and pursuing graphic design. I have a hair business called “Shop Nina Imani”, where I provide many different services. 
-     Soon I will attend Paul Mitchel Hair School to expand my knowledge in the cosmetology field. Making people feel beautiful makes me feel great.<br>Currently I am a student at the University of Missouri where I’m pursuing a Bachelor’s in Arts in Interdisciplinary Studies degree.
+     Soon I will attend Paul Mitchel Hair School to expand my knowledge in the cosmetology field. Making people feel beautiful makes me feel great. Currently I am a student at the University of Missouri where I’m pursuing a Bachelor’s in Arts in Interdisciplinary Studies degree.
       Within this degree, I have component focuses on graphic design, business, and cultural studies. I am presumed to graduate in December 2022.</p>
       <h4 id="links"><a href="Nina Barnett Resume.pdf">PDF Resume</a></h4>
       <h5 id="links2"><a href="https://vimeo.com/690281783">Video Resume</a></h5>
