--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -24,7 +24,7 @@
     </nav>
        <!--This is the Reflection Page-->
        <h1 id="reflect">REFLECTION</h1>
- <h2 id="Past">My Past Experiences and Future Endeavors</h2>
+ <h2 id="Past">MY PAST EXPERIENCES AND FUTURE ENDEAVORS</h2>
  		<div class="essay">
 <p id="reflectpara"><b>W</b>hen I initially enrolled at the University of Missouri, I didn’t have a solidified idea of what I wanted to do as a career.
     Because I like math, I came into the Fall 2018 semester as an Industrial Engineer major.
