--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -8,6 +8,7 @@
    
     <title>Navigation Bar</title>
                <meta charset="utf-8">
+               <meta name="viewport" content="width=device-width, initaial-scale=1.0">
                <title>Home Page</title>
 
 
@@ -27,6 +28,7 @@
           </ul>
     </nav>
    
+
     <h1 id="heading1"></h1>
 
     <div class="photo-gallery">
