--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -3,7 +3,10 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 	<link rel="navigation" href="nav.css">
+
+    <title>Navigation Bar</title>
                <meta charset="utf-8">
+               <meta name="viewport" content="width=device-width, initaial-scale=1.0">
                <title>Reflection</title>
             
 </head>
