--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -5,8 +5,12 @@
 
     <link rel="stylesheet" href="styles.css">
 	<link rel="navigation" href="nav.css">
+
+        <title>Navigation Bar</title>
                <meta charset="utf-8">
-               <title>Projects</title>
+               <meta name="viewport" content="width=device-width, initaial-scale=1.0">
+               <title>Project</title>
+
             
 </head>
 
