--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -2,14 +2,10 @@
 <html lang="en-US">
 <head>
 
-
     <link rel="stylesheet" href="styles.css">
-    <link rel="navigation" href="nav.css">
-   
-         <title>Navigation Bar</title>
+	<link rel="navigation" href="nav.css">
                <meta charset="utf-8">
-               <title>Home Page</title>
-
+               <title>Home</title>  
 
 </head>
 <body>
