--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -5,12 +5,11 @@
     <link rel="stylesheet" href="styles.css">
 	<link rel="navigation" href="nav.css">
                <meta charset="utf-8">
+               <meta name="viewport" content="width=device-width, inital-scale=1.0"
                <title>Project</title>  
 
             
-</head>
-
-	
+</head>	
 <body>
     <nav>
 		<div class="logo">
