--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -6,7 +6,7 @@
 	<link rel="navigation" href="nav.css">
                <meta charset="utf-8">
                <title>Home</title>  
-
+               <link rel="shortcut icon" type="image/png" href="imaniblue.png">
 </head>
 <body>
     
@@ -45,7 +45,10 @@
        I have done some illustrative design work as well, and I am interested in creating things like coloring sheets or books. 
        These templates can also be sold on the site.</p>
 
-<footer id="foot">Nina Barnett<br>Email: nibk27@umsystem.edu</footer>
+       <div class="begin"> Nina Barnett </div> <br>
+       <footer id="foot"> <img src="envelope.png" width="25px" height="25px"> @umsystem.edu <br>
+       <img src="Phone.png" width="20px" height="20px"> (777)777-7777
+       </footer>
 
 </body>
 </html>
