--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -6,7 +6,7 @@
 	<link rel="navigation" href="nav.css">
                <meta charset="utf-8">
                <title>Home</title>  
-               <link rel="shortcut icon" type="image/png" href="imaniblue.png">
+               <link rel="shortcut icon" type="image/png" href="img/imaniblue.png">
 </head>
 <body>
     
