--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -92,7 +92,11 @@
         I felt the typeface I chose mimicked the segments of the caterpillar’s body. I also added the rounded effect.</p>
    
     
-<footer id="foot">Nina Barnett<br>Email: nibk27@umsystem.edu</footer>
+        <div class="begin"> Nina Barnett </div> <br>
+        <footer id="foot"> <img src="envelope.png" width="25px" height="25px"> @umsystem.edu <br>
+        <img src="Phone.png" width="20px" height="20px"> (777)777-7777
+        </footer>
 
 </body>
 </html>
+
