--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -8,8 +8,6 @@
                <title>Reflection</title>  
             
 </head>
-
-	
 <body>
     <nav>
 		<div class="logo">
@@ -57,6 +55,11 @@
     I’m very excited to see what’s in store for me!</p>	
 	
 	</div>
-	<footer id="foot">Nina Barnett<br>Email: nibk27@umsystem.edu</footer>
+    
+    <div class="begin"> Nina Barnett </div> <br>
+    <footer id="foot"> <img src="envelope.png" width="25px" height="25px"> @umsystem.edu <br>
+    <img src="Phone.png" width="20px" height="20px"> (777)777-7777
+    </footer>
+
 </body>
 </html>
