--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -39,6 +39,10 @@
       <h4 id="links"><a href="Nina Barnett Resume.pdf">PDF Resume</a></h4>
       <h5 id="links2"><a href="https://vimeo.com/690281783">Video Resume</a></h5>
 
-      <footer id="foot">Nina Barnett<br>Email: nibk27@umsystem.edu</footer>
+      <div class="begin"> Nina Barnett </div> <br>
+      <footer id="foot"> <img src="envelope.png" width="25px" height="25px"> @umsystem.edu <br>
+      <img src="Phone.png" width="20px" height="20px"> (777)777-7777
+      </footer>
+      
 </body>
 </html>
