--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -22,7 +22,7 @@
           </ul>
     </nav>
    
-
+<div class="container3">
     <h1 id="heading1"></h1>
 
     <div class="photo-gallery">
@@ -49,5 +49,6 @@
        <img src="Phone.png" width="20px" height="20px"> (777)777-7777
        </footer>
 
+       </div>
 </body>
 </html>
