--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -24,7 +24,7 @@
        <!--This is the Reflection Page-->
        <h1 id="reflect">REFLECTION</h1>
  <h2 id="Past">MY PAST EXPERIENCES AND FUTURE ENDEAVORS</h2>
- 		<div class="essay">
+ 		<div class="container2">
 <p id="reflectpara"><b>W</b>hen I initially enrolled at the University of Missouri, I didn’t have a solidified idea of what I wanted to do as a career.
     Because I like math, I came into the Fall 2018 semester as an Industrial Engineer major.
     As I realized this wasn’t a good fit for me, the following semester I became undecided. I have a love for animals, so I decided to become an Animal Science major. 
@@ -55,11 +55,10 @@
     I’m very excited to see what’s in store for me!</p>	
 	
 	</div>
-    
+
     <div class="begin"> Nina Barnett </div> <br>
     <footer id="foot"> <img src="envelope.png" width="25px" height="25px"> @umsystem.edu <br>
     <img src="Phone.png" width="20px" height="20px"> (777)777-7777
     </footer>
-
 </body>
 </html>
