--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -24,6 +24,7 @@
     </nav>
 
     <!--This is the Projects Page-->
+    <div class="container">
     <div class="project-gallery">
              <img id="didot-2" src="didot 2 (1).png" width="300px" height="500px"> 
         <img id="firmin-didot" src="Firmin Didot version 2 (1).png" width="300px" height="500px">
@@ -96,7 +97,7 @@
         <footer id="foot"> <img src="envelope.png" width="25px" height="25px"> @umsystem.edu <br>
         <img src="Phone.png" width="20px" height="20px"> (777)777-7777
         </footer>
-
+</div>
 </body>
 </html>
 
