--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -6,6 +6,9 @@
 	<link rel="navigation" href="nav.css">
                <meta charset="utf-8">
                <title>Home</title>  
+               
+               <link rel="shortcut icon" href="img/LOGO.png">
+               <link rel="apple-touch-icon" href="img/LOGO.png">
 </head>
 <body>
     
@@ -25,12 +28,12 @@
     <h1 id="heading1"></h1>
 
     <div class="photo-gallery">
-        <img id="leaves" src="leaves2.png" width="150px" height="250px">
-        <img id="didot" src="didot 2 (1).png" width="100px" height="225px">
-        <img id="spider" src="spiders 2.png" width="225px" height="425px">
-        <img id="poster" src="POSTER 2.png" width="100px" height="225px">
-        <img id="hands" src="hands.png" width="125px" height="325px">
-        <img id="sunset" src="Sunset.png" width="200px" height="250px">
+        <img id="leaves" src="leaves2.png" width="300px" height="500px">
+        <img id="didot" src="didot 2 (1).png" width="200px" height="550px">
+        <img id="spider" src="spiders 2.png" width="550px" height="850px">
+        <img id="poster" src="POSTER 2.png" width="200px" height="550px">
+        <img id="hands" src="hands.png" width="250px" height="650px">
+        <img id="sunset" src="Sunset.png" width="400px" height="500px">
         </div>
 
            <!--This is the Home Page-->
