--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -27,6 +27,7 @@
    
     <h1 id="heading1"></h1>
 
+<div class="container">
     <div class="photo-gallery">
         <img id="leaves" src="leaves2.png" width="300px" height="500px">
         <img id="didot" src="didot 2 (1).png" width="200px" height="550px">
@@ -51,6 +52,7 @@
        <img src="Phone.png" width="20px" height="20px"> (777)777-7777
        </footer>
 
+    </div>
     
 </body>
 </html>
