--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -29,12 +29,12 @@
 
 <div class="container">
     <div class="photo-gallery">
-        <img id="leaves" src="leaves2.png" width="300px" height="500px">
-        <img id="didot" src="didot 2 (1).png" width="200px" height="550px">
-        <img id="spider" src="spiders 2.png" width="550px" height="850px">
-        <img id="poster" src="POSTER 2.png" width="200px" height="550px">
-        <img id="hands" src="hands.png" width="250px" height="650px">
-        <img id="sunset" src="Sunset.png" width="400px" height="500px">
+        <img id="leaves" src="leaves2.png" width="30%" height="500px">
+        <img id="didot" src="didot 2 (1).png" width="30%" height="550px">
+        <img id="spider" src="spiders 2.png" width="30%" height="850px">
+        <img id="poster" src="POSTER 2.png" width="30%" height="550px">
+        <img id="hands" src="hands.png" width="30%" height="650px">
+        <img id="sunset" src="Sunset.png" width="30%" height="500px">
         </div>
 
            <!--This is the Home Page-->
