--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -23,7 +23,9 @@
       </ul>
 </nav>
     <!--This section is the About page-->
-    <h1 id="aboutheading">NINA BARNETT</h1>
+
+
+   <h1 id="aboutheading">NINA BARNETT</h1>
 
 <img id="headshot" src="headshot.png" width="100px" height="100px"></a>
 
@@ -39,10 +41,12 @@
       <h4 id="links"><a href="Nina Barnett Resume.pdf">PDF Resume</a></h4>
       <h5 id="links2"><a href="https://vimeo.com/690281783">Video Resume</a></h5>
 
+
+      <div class="box">
       <div class="begin"> Nina Barnett </div> <br>
-      <footer id="foot"> <img src="envelope.png" width="25px" height="25px"> @umsystem.edu <br>
-      <img src="Phone.png" width="20px" height="20px"> (777)777-7777
-      </footer>
-      
+      <footer id="foot"> <img src="envelope.png" width="20px" height="20px"> @umsystem.edu <br>
+      <img src="Phone.png" width="25px" height="25px"> (777)777-7777
+       </footer>
+       </div>
 </body>
 </html>
