--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -39,7 +39,7 @@
 
            <!--This is the Home Page-->
        <h3 id="heading3">Thank you for visiting Imani Design!</h3>
-       <p id="paragraph1">The purpose of this website is to simultaneously showcase my graphic design work, as well as my new knowledge in web design. 
+       <p id="paragraph1" >The purpose of this website is to simultaneously showcase my graphic design work, as well as my new knowledge in web design. 
        My main visitors to my website would be staff from admissions offices, and perspective clients. When applying for graduate school, this website will be used as a portfolio. 
        I will continue to update my portfolio before, during, and after graduate school and use it as a professional business website. 
        Visitors can learn more about me as an individual and get a gist of what my work and style is like. 
@@ -47,10 +47,13 @@
        I have done some illustrative design work as well, and I am interested in creating things like coloring sheets or books. 
        These templates can also be sold on the site.</p>
 
+       
+       <div class="box">
        <div class="begin"> Nina Barnett </div> <br>
-       <footer id="foot"> <img src="envelope.png" width="25px" height="25px"> @umsystem.edu <br>
-       <img src="Phone.png" width="20px" height="20px"> (777)777-7777
+       <footer id="foot"> <img src="envelope.png" width="20px" height="20px"> @umsystem.edu <br>
+       <img src="Phone.png" width="25px" height="25px"> (777)777-7777
        </footer>
+       </div>
 
     </div>
     
