--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -10,11 +10,11 @@
 <body>
 
     <nav>
-		<div class="logo">
-			<p>Imani Design</p>
-		  </div>
+        <div class="logo">
+            <p>IMANI DESIGN</p>
+        </div>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="project.html">Portfolio</a></li>
             <li><a href="reflection.html">Reflection</a></li>
@@ -91,12 +91,14 @@
         My thought process from there was “love”. I flipped my image and added a leaf heart to make it more obvious. The picture is off-center to make it more interesting. 
         I felt the typeface I chose mimicked the segments of the caterpillar’s body. I also added the rounded effect.</p>
    
-    
+        
+       <div class="box">
         <div class="begin"> Nina Barnett </div> <br>
-        <footer id="foot"> <img src="envelope.png" width="25px" height="25px"> @umsystem.edu <br>
-        <img src="Phone.png" width="20px" height="20px"> (777)777-7777
-        </footer>
-</div>
+        <footer id="foot"> <img src="envelope.png" width="20px" height="20px"> @umsystem.edu <br>
+            <img src="Phone.png" width="25px" height="25px"> (777)777-7777
+            </footer>     
+            </div>
+
 </body>
 </html>
 
