--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -60,9 +60,9 @@
     <div class="box">
     <div class="begin"> Nina Barnett </div> <br>
     <footer id="foot"> <img src="envelope.png" width="20px" height="20px"> @umsystem.edu <br>
-     <img src="Phone.png" width="25px" height="25px"> (777)777-7777
+     <img src="phone.png" width="25px" height="25px"> (777)777-7777
      </footer>
      </div>
-     
+
 </body>
 </html>
