--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -23,7 +23,7 @@
     </nav>
 
     <!--This is the Projects Page-->
-    <div class="container">
+    <div class="container2">
     <div class="project-gallery">
              <img id="didot-2" src="didot 2 (1).png" width="300px" height="500px"> 
         <img id="firmin-didot" src="Firmin Didot version 2 (1).png" width="300px" height="500px">
