--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -19,7 +19,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="project.html">Portfolio</a></li>
         <li><a href="reflection.html">Reflection</a></li>
-        <li><a href="#Contact">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
 </nav>
     <!--This section is the About page-->
@@ -29,8 +29,8 @@
 
 <img id="headshot" src="headshot.png" width="100px" height="100px"></a>
 
-<h3 id="Quote">“There is <i>one</i> <i>word</i> which may serve as a rule of practice for one’s life –<b>"reciprocity"</b>– Confucius. </h3>
- <h4 id="Under">I believe that the energy and effort you give to the universe and to the people around you will always come back to you. Therefore, I love to help people, give back, and I’m often told that I’m kind-hearted. 
+<h2 id="Quote">“There is <i>one</i> <i>word</i> which may serve as a rule of practice for one’s life –<b>"reciprocity"</b>– Confucius. </h3>
+ <h3 id="Under">I believe that the energy and effort you give to the universe and to the people around you will always come back to you. Therefore, I love to help people, give back, and I’m often told that I’m kind-hearted. 
   I always try my best to remain true to myself, regardless of the negativity I am given by others.</h4>
 
  <p id="intro"> My name is Nina Barnett, and I am from Chicago, IL. For the most part I’m an extrovert and going out to eat with friends or trying creative, spontaneous activities are my definition of fun.
