--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -21,7 +21,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="project.html">Portfolio</a></li>
             <li><a href="reflection.html">Reflection</a></li>
-            <li><a href="#Contact">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
     </nav>
    
