--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -18,7 +18,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="project.html">Portfolio</a></li>
             <li><a href="reflection.html">Reflection</a></li>
-            <li><a href="#Contact">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
     </nav>
        <!--This is the Reflection Page-->
