--- a/islt_7310/contact.html
+++ b/islt_7310/contact.html
@@ -25,10 +25,12 @@
           </ul>
     </nav>
 
-     <div class="contact-box"></div>
-
-    
-     <div class="form">
+     
+    <div class="container">
+    <div class="contact-box">
+        <div class="left"></div>
+        <div class="right">
+        <h2>Contact Us</h2>
          <input type="text" class="input-field" placeholder="First and Last Name">
          <input type="email" class="input-field" placeholder="Email">
          <input type="text" class="input-field" placeholder="Subject">
@@ -36,7 +38,9 @@
 
          <button type="button" class="bttn">Send</button>
 
-     </div>
+    </div>
+    </div>
+    </div>
 
 
 
@@ -49,10 +53,12 @@
 
 
 
-     <div class="box">
+
+
+    <div class="box">
         <div class="begin"> Nina Barnett </div> <br>
         <footer id="foot"> <img src="envelope.png" width="20px" height="20px"> @umsystem.edu <br>
-         <img src="phone.png" width="25px" height="25px"> (777)777-7777
+        <img src="phone.png" width="25px" height="25px"> (777)777-7777
          </footer>
          </div>
  </body>
