--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -18,7 +18,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="project.html">Portfolio</a></li>
             <li><a href="reflection.html">Reflection</a></li>
-            <li><a href="#Contact">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
     </nav>
 
@@ -95,7 +95,7 @@
        <div class="box">
         <div class="begin"> Nina Barnett </div> <br>
         <footer id="foot"> <img src="envelope.png" width="20px" height="20px"> @umsystem.edu <br>
-            <img src="phone.png" width="25px" height="25px"> (777)777-7777
+            <img src="phone.png" width="25px" height="25px"> (708)359-4145
             </footer>     
             </div>
 
