--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -91,10 +91,9 @@
         My thought process from there was “love”. I flipped my image and added a leaf heart to make it more obvious. The picture is off-center to make it more interesting. 
         I felt the typeface I chose mimicked the segments of the caterpillar’s body. I also added the rounded effect.</p>
    
-        
        <div class="box">
         <div class="begin"> Nina Barnett </div> <br>
-        <footer id="foot"> <img src="envelope.png" width="20px" height="20px"> @umsystem.edu <br>
+        <footer id="foot"> <img src="envelope.png" width="20px" height="20px"> barnettnin@gmail.com <br>
             <img src="phone.png" width="25px" height="25px"> (708)359-4145
             </footer>     
             </div>
