--- a/islt_7310/contact.html
+++ b/islt_7310/contact.html
@@ -57,7 +57,7 @@
 
     <div class="box">
         <div class="begin"> Nina Barnett </div> <br>
-        <footer id="foot"> <img src="envelope.png" width="20px" height="20px"> @umsystem.edu <br>
+        <footer id="foot"> <img src="envelope.png" width="20px" height="20px">  barnettnin@gmail.com <br>
         <img src="phone.png" width="25px" height="25px"> (708)359-4145
          </footer>
          </div>
